Password change added; Packages renamed
Password change; Packages were renamed

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
+# General
+.springBeans
+
 # Compiled class file
 *.class
+
+# Directories
+target
+
+# Settings
+.settings
 
 # Log file
 *.log
@@ -24,6 +33,3 @@ hs_err_pid*
 
 .idea/
 *.iml
-
-#directories
-target
