--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
 		<java.version>1.8</java.version>
 	    <maven.compiler.source>1.8</maven.compiler.source>
     	<maven.compiler.target>1.8</maven.compiler.target>
+        <java-version>1.11</java-version>
+        <!-- library versions -->
+        <junit-jupiter-api-version>5.2.0</junit-jupiter-api-version>
+        <junit-jupiter-engine.version>5.1.0</junit-jupiter-engine.version>
+        <junit-platform-launcher.version>1.1.0</junit-platform-launcher.version>
+        <junit-platform-runner.version>1.1.0</junit-platform-runner.version>
+        <assertj-core.version>3.9.1</assertj-core.version>
+        <h2.version>1.4.197</h2.version>
 	</properties>
 
 	<dependencies>
@@ -72,7 +80,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -140,6 +148,35 @@
 		    <version>3.3</version>
 		    <scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-api-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter-engine.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit-platform-launcher.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${junit-platform-runner.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
+        </dependency>
 
 		<dependency>
 		    <groupId>junit</groupId>
