Added Junit tests + some Logger
* Junit tests added
* Logger added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,14 @@ spring.datasource.url=jdbc:postgresql://localhost/matilda
 spring.datasource.username=postgres
 #YOU NEED TO CHANGE YOUR PASSWORD
 spring.datasource.password=ENC(LBRtyWasc+a8xdLHl6xD/S5rzkAaiQIt6NFEZqIT4uI=)
+
+# will be used for Junit test
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+# will be used for Junit test
+
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 #Prevent / Check for broken connections in production
