--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,26 @@
 			<version>4.6.1</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- used for calendar -->
+		
+			<dependency>
+	            <groupId>org.webjars</groupId>
+	            <artifactId>jquery</artifactId>
+	            <version>2.0.3</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.webjars.bower</groupId>
+	            <artifactId>moment</artifactId>
+	            <version>2.19.1</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.webjars.bower</groupId>
+	            <artifactId>fullcalendar</artifactId>
+	            <version>3.5.1</version>
+	        </dependency>
 
+		<!-- used for calendar -->
 	</dependencies>
 
 	<build>
