Extended application.properties
* Added general part of settings for Matilda in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,14 @@ spring.http.encoding.charset=UTF-8
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+#############################################
+#			Matilda Settings				#
+#############################################
+
+matilda.mainsite=Matilda Hauptseite
+matilda.events=Matilda Veranstaltung
+matilda.material=Matilda Material
+matilda.passwordchange=Matilda PasswordChange
+matilda.registration=Matilda Registration
+matilda.login=Matilda Login
