Extended Junit and Integration Tests
* Added some Junit and Integration Tests

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,110 @@ hs_err_pid*
 
 .idea/
 *.iml
+.classpath
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.jdt.ui.prefs
+target/classes/application-test.properties
+target/classes/application.properties
+target/classes/import-test.sql
+target/classes/import.sql
+target/classes/META-INF/maven/at.wrk.fmd/matilda/pom.properties
+target/classes/META-INF/maven/at.wrk.fmd/matilda/pom.xml
+target/classes/static/js/bootstrap.bundle.js
+target/classes/static/js/bootstrap.bundle.min.js
+target/classes/static/js/bootstrap.js
+target/classes/static/js/bootstrap.min.js
+target/classes/templates/fragment/header.html
+target/classes/templates/index.html
+target/classes/templates/login.html
+target/classes/templates/materialen.html
+target/classes/templates/passwordaenderung.html
+target/classes/templates/registration.html
+target/classes/templates/report.html
+target/classes/templates/veranstaltung.html
+target/classes/templates/veranstaltungen.html
+target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+target/m2e-wtp/web-resources/META-INF/maven/at.wrk.fmd.matilda/matilda/pom.properties
+target/m2e-wtp/web-resources/META-INF/maven/at.wrk.fmd.matilda/matilda/pom.xml
+target/matilda-0.0.1-SNAPSHOT.war.original
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/application.properties
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/import.sql
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/invalid-password-list.txt
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-grid.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-grid.css.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-grid.min.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-grid.min.css.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-reboot.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-reboot.css.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-reboot.min.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap-reboot.min.css.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap.css.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap.min.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/bootstrap.min.css.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/header/header.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/index.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/login-center.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/css/main.css
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.bundle.js
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.bundle.js.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.bundle.min.js
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.bundle.min.js.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.js
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.js.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.min.js
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/js/bootstrap.min.js.map
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/static/pics/WRK_Logo.jpg
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/addmaterial.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/btransaktion.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/buchung.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/einheitentyp.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/einheitentypen.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/einheitentypupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/error/access-denied.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/fragment/footer.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/fragment/header.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/fragment/topnav.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/index.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/inventur.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/lagerstandort.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/lagerstandorten.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/lagerstandortupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/lieferung.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/login.html.bck
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/main.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/mateinupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/material.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialeinheit.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialeinheiten.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialen.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialtyp.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialtypen.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialtypupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/materialverwaltung.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/mitarbeitereinheit.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/mitarbeitereinheiten.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/mitarbeitertyp.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/mitarbeitertypen.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/mitarbeitertypupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/mitarbeiterverwaltung.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/miteinupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/ntransaktion.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/passwordaenderung.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/pdf.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/registration.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/report.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/users.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/veranstaltung.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/veranstaltungeinheit.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/veranstaltungen.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/classes/templates/veranstaltungupdate.html
+target/matilda-0.0.1-SNAPSHOT/WEB-INF/jsp/login.jsp
+target/maven-archiver/pom.properties
+target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+target/test-classes/at/wrk/fmd/website/application.propertiesTest
+target/test-classes/import-test.sql
+target/test-classes/test.properties
