--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -13,19 +13,14 @@ server.error.whitelabel.enabled=false
 #											#
 #############################################
 
-# PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost/matilda
-spring.datasource.username=postgres
+# H2
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+
 #YOU NEED TO CHANGE YOUR PASSWORD
 spring.datasource.password=ENC(LBRtyWasc+a8xdLHl6xD/S5rzkAaiQIt6NFEZqIT4uI=)
-
-# will be used for Junit test
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-#spring.datasource.username=sa
-#spring.datasource.password=sa
-# will be used for Junit test
-
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 #Prevent / Check for broken connections in production
@@ -83,17 +78,3 @@ spring.thymeleaf.encoding=UTF-8
 
 spring.messages.encoding=UTF-8
 spring.http.encoding.charset=UTF-8
-
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-
-#############################################
-#			Matilda Settings				#
-#############################################
-
-matilda.mainsite=Matilda Hauptseite
-matilda.events=Matilda Veranstaltung
-matilda.material=Matilda Material
-matilda.passwordchange=Matilda PasswordChange
-matilda.registration=Matilda Registration
-matilda.login=Matilda Login
