--- a/pom.xml
+++ b/pom.xml
@@ -113,11 +113,19 @@
 			<version>1.16.16</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- iText pdf -->
         <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
             <version>4.2.2</version>
         </dependency> 
+        <!-- https://javalibs.com/artifact/com.itextpdf/kernel -->
+		<dependency>
+		   <groupId>com.itextpdf</groupId>
+		   <artifactId>kernel</artifactId>
+		   <version>7.1.2</version>
+		</dependency>
+		<!-- iText pdf -->        
 		<dependency>
     		<groupId>org.apache.ant</groupId>
     		<artifactId>ant</artifactId>
