--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #											#
 #############################################
 
-server.port=8080
+server.port=8443
 server.error.whitelabel.enabled=false
 
 #############################################
@@ -58,6 +58,10 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 jasypt.encryptor.password=secretpassword
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
+server.ssl.key-store=C:\\Program Files\\Java\\jdk-11\\bin\\keystore.p12
+server.ssl.key-store-password=#WRKADMIN#
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
 
 #############################################
 #											#
