--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@
 server.port=8443
 server.error.whitelabel.enabled=false
 
+# Changing message.properties directory instead of resources
+spring.messages.basename=langs.messages
+
 #############################################
 #											#
 #			DB Config						#
