--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -104,3 +104,8 @@ matilda.material=Matilda Material
 matilda.passwordchange=Matilda PasswordChange
 matilda.registration=Matilda Registration
 matilda.login=Matilda Login
+matilda.mitarbeiterverwaltung=Matilda Mitarbeiterverwaltung
+matilda.report=Matilda Report
+matilda.lagerstandort=Matilda Lagerstandort
+matilda.buchung=Matilda Buchung
+matilda.lieferung=Matilda Lieferung
