--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,11 @@
             <artifactId>postgresql</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+<!--         <dependency>
             <groupId>com.github.the-alchemist</groupId>
             <artifactId>hibernate-postgresql</artifactId>
             <version>1.0.16</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -180,7 +180,6 @@
         </dependency>
 
         <!-- used for calendar -->
-
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
@@ -196,8 +195,25 @@
             <artifactId>fullcalendar</artifactId>
             <version>3.5.1</version>
         </dependency>
-
         <!-- used for calendar -->
+        <!-- Selenium -->
+		<dependency>
+		    <groupId>io.github.bonigarcia</groupId>
+		    <artifactId>webdrivermanager</artifactId>
+		    <version>3.3.0</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    </dependency>
+	<dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>selenium-jupiter</artifactId>
+        <version>3.1.0</version>
+        <scope>test</scope>
+</dependency>
+		<!-- Selenium -->
     </dependencies>
 
     <build>
