fix default properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.messages.basename=langs.messages
 #############################################
 
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://10.13.5.127/matilda
+spring.datasource.url=jdbc:postgresql://localhost/matilda
 spring.datasource.username=matilda
 #YOU NEED TO CHANGE YOUR PASSWORD
 spring.datasource.password=matilda
